--- a/styles.css
+++ b/styles.css
@@ -36,12 +36,18 @@ body {
 }
 
 section {
-    scroll-margin-top: 90px;
+    scroll-margin-top: 120px;
+}
+
+@media (max-width: 968px) {
+    section {
+        scroll-margin-top: 150px;
+    }
 }
 
 @media (max-width: 768px) {
     section {
-        scroll-margin-top: 110px;
+        scroll-margin-top: 170px;
     }
 }
 
